--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sua Chave Auto. Encontre Automóveis e agência de veículos em poucos cliques! Encontre Automóveis, carros, motos, caminhões, ônibus e tratores em todo o Brasil, Encontre Automóvel, carro, moto, caminhão, ônibus e trator em todo o Brasil, Automóveis, carros e motos na minha cidade, Automóveis, carros e motos no meu Bairro, Automóveis, carros e motos no Rio de Janeiro, Automóveis, carros e motos em São Paulo, Automóveis, carros e motos na Bahia, Automóveis, carros e motos em Rio Bonito, Automóveis, carros e motos em São Pedro da Aldeira, Automóveis, carros e motos em Squarema, Automóveis, carros e motos em Araruama, Automóveis, carros e motos em Automóveis, carros e motos em Niterói, Automóveis, carros e motos em Cabo Frio, Automóveis, carros e motos em Maricá, Automóveis, carros e motos em Macaé, Automóveis, carros e motos em Rio das Ostras"
+      content="Marcelino Automóveis - Os melhores automóveis de Rio Bio Bonito e Região, Automóveis em Rio Bonito, Carros em Rio Bonito, Motos em Rio Bonito, Carros Rio de Janeiro, Motos Rio de Janeiro, Carros Região dos Lagos, Motos Região dos Lago"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/icon.png" />
     <!--
@@ -47,7 +47,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Sua Chave Auto - Encontre Automóveis, motos e agência de veículos em poucos cliques!</title>
+    <title>Marcelino Automóveis - Os melhores automóveis de Rio Bio Bonito e Região</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
